--- a/UniversityLibrary/Storyboard/Base.lproj/Librarian.storyboard
+++ b/UniversityLibrary/Storyboard/Base.lproj/Librarian.storyboard
@@ -178,7 +178,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3h9-g8-SDT">
-                                <rect key="frame" x="36" y="94" width="303" height="500"/>
+                                <rect key="frame" x="36" y="50" width="303" height="500"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxH-2o-VaR" customClass="GeneralUILabel" customModule="UniversityLibrary" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="303" height="20.5"/>
@@ -388,7 +388,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nCL-aa-YuB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1751" y="185"/>
+            <point key="canvasLocation" x="1742" y="162"/>
         </scene>
         <!--Librarian Library View Controller-->
         <scene sceneID="Gjz-tc-0dt">
@@ -403,10 +403,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uEh-T8-lvi">
-                                <rect key="frame" x="37.5" y="228.5" width="300" height="210"/>
+                                <rect key="frame" x="37.5" y="173.5" width="300" height="320"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ces-Ww-bLw" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Am7-Gp-fLM" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="Fkt-h3-mVP"/>
+                                            <constraint firstAttribute="height" constant="100" id="yvd-pc-T6k"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="25" maxY="0.0"/>
+                                        <state key="normal" title="Search Books" image="searchIcon">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="goToSearchBooks:" destination="wdj-at-ZNv" eventType="touchUpInside" id="KyW-69-xnx"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ces-Ww-bLw" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="110" width="300" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="70K-bv-APf"/>
                                             <constraint firstAttribute="width" constant="300" id="f8M-9F-wGd"/>
@@ -420,18 +434,18 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Ga-vC-WNc" customClass="MenuUIButton" customModule="UniversityLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="110" width="300" height="100"/>
+                                        <rect key="frame" x="0.0" y="220" width="300" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="gj7-BF-wvU"/>
                                             <constraint firstAttribute="width" constant="300" id="tkx-kk-ntn"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="25" maxY="0.0"/>
-                                        <state key="normal" title="Search Books" image="searchIcon">
+                                        <state key="normal" title="Library" image="allBooksIcon">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
                                             <action selector="goToSearchBooks:" destination="wdj-at-ZNv" eventType="touchUpInside" id="e3f-ZM-jFb"/>
-                                            <segue destination="dT4-An-1v1" kind="show" id="Ae5-QE-rIP"/>
+                                            <segue destination="cWi-Jb-J7i" kind="show" id="X52-Bf-Lo2"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -453,11 +467,99 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oJr-FT-aMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-311.19999999999999" y="162.3688155922039"/>
+            <point key="canvasLocation" x="-126" y="161"/>
+        </scene>
+        <!--Librarian Books View Controller-->
+        <scene sceneID="510-62-w14">
+            <objects>
+                <viewController storyboardIdentifier="LibrarianBooksViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cWi-Jb-J7i" customClass="LibrarianBooksViewController" customModule="UniversityLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CYW-qk-VbJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="3c9-Bk-Agh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GlZ-K1-5az">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ubO-tU-7dR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="BookCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookCell" rowHeight="90" id="lNE-8u-84g" customClass="BookCell" customModule="UniversityLibrary" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="lNE-8u-84g" id="fcc-cK-vV9">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kD1-J6-LjI">
+                                                    <rect key="frame" x="25" y="10" width="325" height="73"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Star Trek" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yiy-AQ-T1d" customClass="GeneralUILabel" customModule="UniversityLibrary" customModuleProvider="target">
+                                                            <rect key="frame" x="18" y="15" width="291.5" height="17.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JK Rowling" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caa-rH-fop" customClass="GeneralUISubLabel" customModule="UniversityLibrary" customModuleProvider="target">
+                                                            <rect key="frame" x="18" y="35" width="291.5" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="Yiy-AQ-T1d" firstAttribute="top" secondItem="kD1-J6-LjI" secondAttribute="top" constant="15" id="1OK-r5-dmJ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="caa-rH-fop" secondAttribute="bottom" constant="17" id="6V8-3s-O0d"/>
+                                                        <constraint firstAttribute="trailing" secondItem="caa-rH-fop" secondAttribute="trailing" constant="15.5" id="79y-AO-Fzq"/>
+                                                        <constraint firstItem="Yiy-AQ-T1d" firstAttribute="leading" secondItem="kD1-J6-LjI" secondAttribute="leading" constant="18" id="Oco-cO-Kxi"/>
+                                                        <constraint firstItem="caa-rH-fop" firstAttribute="top" secondItem="Yiy-AQ-T1d" secondAttribute="bottom" constant="2" id="VO4-aZ-Oor"/>
+                                                        <constraint firstItem="caa-rH-fop" firstAttribute="leading" secondItem="kD1-J6-LjI" secondAttribute="leading" constant="18" id="tKm-cm-rnF"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Yiy-AQ-T1d" secondAttribute="trailing" constant="15.5" id="wcD-bA-hg5"/>
+                                                        <constraint firstItem="caa-rH-fop" firstAttribute="leading" secondItem="kD1-J6-LjI" secondAttribute="leading" constant="18" id="ybk-Mb-aeN"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="kD1-J6-LjI" secondAttribute="bottom" constant="-4" id="Mlo-lO-s5S"/>
+                                                <constraint firstItem="kD1-J6-LjI" firstAttribute="leading" secondItem="fcc-cK-vV9" secondAttribute="leadingMargin" constant="10" id="SwM-Y9-S1o"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kD1-J6-LjI" secondAttribute="trailing" constant="10" id="gBV-od-VUE"/>
+                                                <constraint firstItem="kD1-J6-LjI" firstAttribute="top" secondItem="fcc-cK-vV9" secondAttribute="top" constant="10" id="wuy-20-w6q"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="BookView" destination="kD1-J6-LjI" id="Wu3-eE-y1G"/>
+                                            <outlet property="bookAuthorLabel" destination="caa-rH-fop" id="4Al-eu-lMx"/>
+                                            <outlet property="bookTitleLabel" destination="Yiy-AQ-T1d" id="4cq-5X-zIT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="XEr-Us-yDd">
+                        <barButtonItem key="rightBarButtonItem" image="searchIcon" id="FMS-bO-X56">
+                            <connections>
+                                <action selector="goToSearchView:" destination="cWi-Jb-J7i" id="73c-ps-rcP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="ubO-tU-7dR" id="7vj-xj-US8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SGq-MH-DJa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="817" y="895"/>
         </scene>
     </scenes>
     <resources>
         <image name="addBooksIcon" width="25" height="25"/>
+        <image name="allBooksIcon" width="25" height="25"/>
         <image name="delete-button" width="32" height="32"/>
         <image name="edit-button" width="32" height="32"/>
         <image name="searchIcon" width="25" height="25"/>
